--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
       .no-print { display: none !important; }
       
       .sheet { display: block !important; width: 100%; margin: 0 auto; padding: 0; }
-      .sheet-root { width: 100%; min-height: calc(297mm - 10mm); padding: 12mm; gap: 12mm; }
-      .sheet-root.sheet-3rd { gap: 14mm; }
+
+      /* Print scaling adjustments only for 3rd class */
+      .sheet-root.sheet-3rd { width: 100%; min-height: calc(297mm - 10mm); padding: 12mm; gap: 14mm; }
       .sheet-root.sheet-3rd .sheet-header h1 { font-size: 26px; }
       .sheet-root.sheet-3rd .section-header h3 { font-size: 15px; }
       .sheet-root.sheet-3rd .spellings-grid { gap: 12px; }
