Reduce 5th class print whitespace between sections

--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
       .sheet-root.sheet-3rd .maths-box .equations div { font-size: 12px; }
 
       /* Compact layout for 5th class to keep to one page */
-      .sheet-root.sheet-5th { width: 100%; padding: 6mm; gap: 8mm; }
-      .sheet-root.sheet-5th .section { margin-bottom: 8px; }
-      .sheet-root.sheet-5th .section-header { margin-bottom: 4px; padding-bottom: 3px; }
+      .sheet-root.sheet-5th { width: 100%; padding: 6mm; gap: 6mm; }
+      .sheet-root.sheet-5th .sheet-header { padding-bottom: 6px; margin-bottom: 8px; }
+      .sheet-root.sheet-5th .section { margin-bottom: 6px; }
+      .sheet-root.sheet-5th .section-header { margin-bottom: 3px; padding-bottom: 2px; }
       .sheet-root.sheet-5th .spellings-grid { gap: 6px; }
       .sheet-root.sheet-5th .translation-row div { padding: 3px 6px; }
       .sheet-root.sheet-5th .maths-grid { gap: 6px; }
