--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
       .sheet-root.sheet-5th .maths-box .equations { padding: 6px; }
       .sheet-root.sheet-5th .maths-box .equations div { font-size: 10px; }
 
-      /* Margins: 0.2in top/bottom, 5mm left/right */
-      @page { size: A4; margin: 0.2in 5mm; }
+      /* Margins: 0.2mm top/bottom, 5mm left/right */
+      @page { size: A4; margin: 0.2mm 5mm; }
       
       /* Headers - Scaled Up */
       .sheet-header { border-bottom: 2px solid #312e81; padding-bottom: 10px; margin-bottom: 15px; }
